--- a/AUTHORS
+++ b/AUTHORS
@@ -1,2 +1,3 @@
 # This file lists all individuals having contributed content to the repository.
   Tekle Gebreyesus <tekle1421@gmail.com>
+  Guta Tesema <guutatesema@gmail.com>
